kubernetes/prod/media/nodecast-tv/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodecast-tv
  namespace: media
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: nodecast-tv
