kubernetes/prod/media/nodecast-tv/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: nodecast-tv
    app.kubernetes.io/name: nodecast-tv
  name: nodecast-tv
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
  - host: iptv.nmoura.pt
    http:
      paths:
      - backend:
          service:
            name: nodecast-tv
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
